--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.projectName=se2ein
 sonar.projectVersion=1.0
 
 
-sonar.java.binaries=./app/build/intermediates/classes/debug
+sonar.java.binaries=.
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set.
