--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ addons:
   sonarcloud:
     organization: "walthersa-github" # der key der organisation auf sonarcloud.io
     token:
-      secure: $SONAR_TOKEN       # $SONAR_TOKEN -> Umgebungsvariable auf travis-ci.org
+      secure: 8dclwEFT5dHM7azWA52Swg       # $SONAR_TOKEN -> Umgebungsvariable auf travis-ci.org
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
